fix div container header styling on mobile

--- a/src/About.css
+++ b/src/About.css
@@ -14,6 +14,12 @@
   margin-bottom: 75px;
 }
 
+@media screen and (max-width: 768px) {
+  .about-container h1 {
+    margin-bottom: 200px;
+  }
+}
+
 .bio-container {
   width: 80vw;
   display: flex;
