--- a/src/Work.css
+++ b/src/Work.css
@@ -10,6 +10,12 @@
   margin-bottom: 75px;
 }
 
+@media screen and (max-width: 768px) {
+  .work-container h1 {
+    margin-top: 75px;
+  }
+}
+
 .carousel-inner {
   max-height: 50rem;
 }
